modified:   src/posts/12.md 	modified:   src/posts/13.md 	modified:   src/posts/9.md

--- a/src/posts/12.md
+++ b/src/posts/12.md
@@ -10,7 +10,7 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 
 🚧 Page under construction 🚧
 
-[![Berry Rice](https://i.redd.it/eee4rwj3ssa81.png)](https://www.reddit.com/r/unixporn/comments/s0cccz/berry_ayudark_my_super_rice)
+[![Berry Rice](https://i.imgur.com/7DWRz1Z.webp)](https://www.reddit.com/r/unixporn/comments/s0cccz/berry_ayudark_my_super_rice)
 
 {% if lang == 'vi' %}
   Khi đang viết [Image viewer/media player tối giản](../9/) về năm giai đoạn rice image viewer, mình nhận ra năm giai đoạn đấy không chỉ có ở riêng việc rice image viewer, nó là của cả việc rice nói chung. Thế nên mình viết bài blog này để đi sâu vào năm giai đoạn rice tối giản.
@@ -23,7 +23,7 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 [![KDE Rice](https://i.imgur.com/NTHZScu.webp)](https://i.imgur.com/NTHZScu.webp)
 
 {% if lang == 'vi' %}
-  Những bé này mới cài Linux, cụ thể là Ubuntu hoặc Ubuntu-based với DE phổ biến như Gnome hoặc KDE. Bé cài một số extensions, theme, icons rồi cảm thấy khá ưng ý với setup của mình, nghĩ rằng mình chắc sẽ cả config thêm cái gì trong máy nữa đâu.
+  Những bé này mới cài Linux, cụ thể là Ubuntu hoặc Ubuntu-based với DE phổ biến như Gnome hoặc KDE. Bé cài một số extensions, theme, icons rồi cảm thấy khá ưng ý với setup của mình, nghĩ rằng mình chắc sẽ chả config thêm cái gì trong máy nữa đâu.
 {% else %}
   TODO
 {% endif %}
@@ -33,7 +33,7 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 [![BSPWM Rice](https://user-images.githubusercontent.com/43980777/104730274-50495600-576c-11eb-9520-890cb45815d9.png)](https://codeberg.org/NNB/dotfiles/releases/tag/v1.0.0)
 
 {% if lang == 'vi' %}
-  Sau khi cài Linux các thứ xong, bé newbie đấy chắc cũng phải xem kha kha video về Linux trên Youtube, vì thế mà feed của bé hiện kha khá vid của các Linux Youtuber, bé nhấn vào xem rồi chợt nghe thấy ba chữ "I use Arch" (bốn nếu tính cả "BTW"). Bé backup tất cả mọi thứ và distro-hop sang Arch hoặc một Arch-base distro. Không lâu sau đấy bé khám phá ra [r/unixporn](https://www.reddit.com/r/unixporn). Mắt bé sáng lên, bé vội cài [BSPWM](https://github.com/baskerville/bspwm) + [Polybar](https://polybar.github.io) hoặc [Hyprland](https://hyprland.org) + [Waybar](https://github.com/Alexays/Waybar) và dành 2-3 tuần để rice nó.
+  Sau khi cài Linux các thứ xong, bé newbie đấy chắc cũng phải xem kha kha video về Linux trên Youtube, vì thế mà feed của bé hiện kha khá vid của các Linux Youtuber, bé nhấn vào xem rồi chợt nghe thấy ba chữ "I use Arch" (bốn nếu tính cả "BTW"). Bé backup tất cả mọi thứ và distro-hop sang Arch hoặc một Arch-based distro. Không lâu sau đấy bé khám phá ra [r/unixporn](https://www.reddit.com/r/unixporn). Mắt bé sáng lên, bé vội cài [BSPWM](https://github.com/baskerville/bspwm) + [Polybar](https://polybar.github.io) hoặc [Hyprland](https://hyprland.org) + [Waybar](https://github.com/Alexays/Waybar) và dành 2-3 tuần để rice nó.
 
   Dùng tiling WM là tâm huyết đi theo keyboard workflow, mà keyboard workflow trên Linux thì không thể thiếu terminal.
 
@@ -59,7 +59,7 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
   - Khi dùng terminal hoặc text editor, mình chỉ muốn tập trung vào cửa sổ mà mình đang gõ và rất hiếm khi cần để nhiều cửa sổ hiện cùng một lúc.
   - Tile 3-4 cửa sổ trên màn hình trông rất là chật chội, cửa sổ nào cũng không đủ to để mình có thể dùng thoải mái. Lợi ích duy nhất của việc tile 3-4 cửa sổ trên màn hình là để dễ dàng di chuột qua lại các cửa sổ để tương tác... nhưng như thế lại đối nghịch với keyboard workflow.
 
-  Đến lúc dọn nhà sang floating WM rồi. Có điều là nhưng WM cực kỳ tối giản như [SOWM](https://github.com/dylanaraps/sowm) và [Berry](https://berrywm.org) khá là buggy (ít ra là ở thời điểm này) nên đành ngậm ngùi quay lại tiling WM, mình chỉ cần set rule cho mọi cửa sổ tự dộng float là được.
+  Đến lúc dọn nhà sang floating WM rồi. Có điều là những WM cực kỳ tối giản như [SOWM](https://github.com/dylanaraps/sowm) và [Berry](https://berrywm.org) khá là buggy (ít ra là ở thời điểm này) nên đành ngậm ngùi quay lại tiling WM, mình chỉ cần set rule cho mọi cửa sổ tự động float là được.
 {% else %}
   ### Tiling WM is bloat
 
@@ -75,13 +75,13 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 {% if lang == 'vi' %}
   ### Bar cũng bloat
 
-  _\*Khịt khịt\*_ mình ngửi thấy mùi bloat, và mùi đó phát ra từ thanh bar. Chuyển sang bar nhẹ hơn như [Lemonbar](https://github.com/LemonBoy/bar) hay thậm chí là [biến terminal thành bar](https://sw.kovidgoyal.net/kitty/kittens/panel/#command-line-interface) không chắc đã khiến mùi bloat hết thum thủm.
-
-  Vấn đề là nó chiếm đi không gian quý báu trên màn hình của mình, một khoảng không gian rộng 16 đến 24 pixel trải dài từ đầu này sang đầu kia bị màn hình bị _lãng phí_ vào việc hiển thị: đồng hồ, workspaces, và một số thông tin vớ vẩn mà thật sự mình chả cần check nó liên tục. Không thể chấp nhận được, vứt bar thôi!
-
-  Ta có thể chỉ hiện danh sách workspaces và đòng hồ khi chuyển workspace hoặc dùng phím tắt [bằng thông báo](https://gist.github.com/NNBnh/5f6e601a6a82a6ed43b1959698758141?permalink_comment_id=3735888#gistcomment-3735888).
-
-  Hoặc đi theo con đường hardcore và bỏ nó hoàn toàn luôn, xem giờ thì xem trên đồng hồ đeo tay, đồng hồ treo tường hoặc dùng lệnh `date` XD. Việc chia workspaces thật sự cũng chả cần thiết lắm khi mình ít tile cửa sổ và toàn để app toàn màn hình, bỏ workspaces luôn đi cho gọn, đỡ phải config, đỡ phải hiển thị.
+  > _\*Khịt khịt\*_ mình ngửi thấy mùi bloat, và mùi đó phát ra từ thanh bar. Chuyển sang bar nhẹ hơn như [Lemonbar](https://github.com/LemonBoy/bar) hay thậm chí là [biến terminal thành bar](https://sw.kovidgoyal.net/kitty/kittens/panel/#command-line-interface) không chắc đã khiến mùi bloat hết thum thủm.
+  >
+  > Vấn đề là nó chiếm đi không gian quý báu trên màn hình của mình, một khoảng không gian rộng 16 đến 24 pixel trải dài từ đầu này sang đầu kia bị màn hình bị _lãng phí_ vào việc hiển thị: đồng hồ, workspaces, và một số thông tin vớ vẩn mà thật sự mình chả cần check nó liên tục. Không thể chấp nhận được, vứt bar thôi!
+  >
+  > Ta có thể chỉ hiện danh sách workspaces và đồng hồ khi chuyển workspace hoặc dùng phím tắt [bằng thông báo](https://gist.github.com/NNBnh/5f6e601a6a82a6ed43b1959698758141?permalink_comment_id=3735888#gistcomment-3735888).
+  >
+  > Hoặc đi theo con đường hardcore và bỏ nó hoàn toàn luôn, xem giờ thì xem trên đồng hồ đeo tay, đồng hồ treo tường hoặc dùng lệnh `date` XD. Việc chia workspaces thật sự cũng chả cần thiết lắm khi mình ít tile cửa sổ và toàn để app toàn màn hình, bỏ workspaces luôn đi cho gọn, đỡ phải config, đỡ phải hiển thị.
 {% else %}
   ### Bar is also bloat
 
@@ -93,13 +93,13 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 [![TTY rice w/ Zellij](https://user-images.githubusercontent.com/43980777/218121026-2d2ddb94-5105-4df8-a6a9-8ab632b69ce3.png)](https://codeberg.org/NNB/dotfiles/releases/tag/v3.5.0)
 
 {% if lang == 'vi' %}
-  WM... là Bloat. Mình cũng có thể gỡ WM và login manager luôn. Dùng full TTY của Linux Kernel và gõ lệnh để mở app... [NOWM](https://github.com/K4zoku/nowm) hoặc [[wms]](https://git.disroot.org/root_informatica/wms) sẽ giúp trải nghiệm của bạn đỡ thê thảm hơn khi không có WM.
+  WM... là Bloat. Ta cũng có thể gỡ WM và login manager luôn. Dùng full TTY của Linux Kernel và gõ lệnh để mở app... [NOWM](https://github.com/K4zoku/nowm) hoặc [[wms]](https://git.disroot.org/root_informatica/wms) sẽ giúp trải nghiệm đỡ thê thảm hơn khi không có WM.
 
-  Nhớ mấy cái TUI/CLI app bà bạn cài ở giai đoạn beginner không? Bạn nhận ra bạn không cần đến 80% trong số đó, bạn ưa nhưng công cụ có sẵn trong chuẩn POSIX để script của bạn di động hơn. Bạn thậm chỉ còn bỏ luôn file manager!
+  Nhớ mấy cái TUI/CLI app bà họ cài ở giai đoạn beginner không? Chúng ta nhận ra mình không cần đến 80% trong số đó, mình thà dùng những công cụ có sẵn trong chuẩn POSIX để script trở nên di động hơn. Rồi thậm chỉ còn bỏ luôn file manager!
 
-  Prompt của bạn giờ chỉ là "`$`", `pwd` là ngọn đuốc duy nhất thắp sáng cho bạn trong file system.
+  Shell prompt giờ chỉ là "`$`", `pwd` là ngọn đuốc duy nhất thắp sáng cho ta trong file system.
 
-  Rice giờ không chỉ tối giản nữa, nó biến thành cái hố đen rồi. Hiếm kẻ đủ can đảm để đi xa hơn ngưỡng này, nhưng một số huyền thoại tiếp tục đi tiếp, đặc điểm duy nhất để nhận dạng ra họ là họ làm [Linux From Scratch](https://www.linuxfromscratch.org/lfs) và biết [Framebuffer](https://wikipedia.org/wiki/Linux_framebuffer) là gì.
+  Rice giờ không chỉ tối giản nữa, nó biến thành cái hố đen rồi. Hiếm kẻ đủ can đảm để đi xa hơn ngưỡng này, nhưng một số huyền vẫn thoại tiếp tục, đặc điểm duy nhất để nhận dạng ra họ là họ làm [Linux From Scratch](https://www.linuxfromscratch.org/lfs) và biết [Linux framebuffer](https://wikipedia.org/wiki/Linux_framebuffer) là gì.
 {% else %}
   TODO
 {% endif %}
@@ -109,7 +109,9 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 [![Gnome Rice](https://raw.githubusercontent.com/Aylur/dotfiles/gnome43/assets/rose.png)](https://github.com/Aylur/dotfiles/tree/gnome43)
 
 {% if lang == 'vi' %}
-  TODO
+  Sau một thời kỳ mệt mỏi cầu kì tối giản hóa rice, bạn có một cái nhìn khác về sự tối giản. Họ nhận ra rằng dùng DE rất tối giản về mặt thời gian và công sức. DE nói thật cũng không bloat lắm, nó có một số tính năng mà không phải lúc nào mình cũng dùng nhưng có nó thì cũng rất tiện trong những trường hợp cơ nhỡ. Và nếu mình không cài hay config gì mà chỉ sử dụng những thứ mặc định trong máy thì dotfiles của mình sẽ gọn hơn rất nhiều!
+
+  Và như thế họ quyết định quay lại cài DE. Nhưng lần này với nhiều kinh nghiệm và kĩ năng, rice của họ chất lượng hơn bao giờ hết. Họ thậm chí còn cài thêm nhiều tính năng màu mè hơn, cá tính hơn, đi ngược lại hoàn toàn sự tối giản trước kia... Cuối cùng họ thấy khá ưng ý với setup của mình, nghĩ rằng mình chắc sẽ chả config thêm cái gì trong máy nữa đâu.
 {% else %}
   TODO
 {% endif %}
