--- a/src/posts/13.md
+++ b/src/posts/13.md
@@ -21,6 +21,19 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 
   ## Other
 
+  Bloat-free
+  Codex, 7z, Rar
+  Git, FFMPEG, Python, [WL-clipboard](https://github.com/bugaevc/wl-clipboard)
+  Unikey
+
+  - Gnome: [Gnome Tweaks](https://gitlab.gnome.org/GNOME/gnome-tweaks), [Extension Manager](https://github.com/mjakeman/extension-manager)
+  - KDE: [Kvantum](https://store.kde.org/p/1005410)
+
+  ## Bonus
+
+  Browser-free
+  Wine
+
   ## Distro
 
   https://github.com/NNBnh/dotfiles/wiki/which#-operating-system
