--- a/src/posts/9.md
+++ b/src/posts/9.md
@@ -45,9 +45,9 @@ image: https://images.unsplash.com/photo-1543940610-e7e6c111ea10
 ## 4. Extreme Minimalist
 
 {% if lang == 'vi' %}
-  Bạn có thể kéo thả file media (ảnh, video, nhạc) vào trình duyệt web và nó sẽ chạy nó. Nhân ra điều này, bạn vội gỡ cài đặt luôn MPV và đi theo con đường khổ đau, còn đường tối giản tột cùng. Có một vài định dạng nó không nhận nhưng nó vẫn có thể làm một giải pháp chấp nhận được... Hoặc không, dùng trình duyệt chỉ xem được ảnh một cách rất cơ bản, trải nghiệm cùng của nó khá khó chịu. "Liệu mình có nên quay xe không?", "Liệu thế này có quá tối giản không?" bạn thầm nghĩ.
+  Bạn có thể kéo thả file media (ảnh, video, nhạc) vào trình duyệt web và nó sẽ chạy nó. Nhân ra điều này, họ vội gỡ cài đặt luôn MPV và đi theo con đường khổ đau, còn đường tối giản tột cùng. Có một vài định dạng nó không nhận nhưng nó vẫn có thể làm một giải pháp chấp nhận được... Hoặc không, dùng trình duyệt chỉ xem được ảnh một cách rất cơ bản, trải nghiệm cùng của nó khá khó chịu. "Liệu mình có nên quay xe không?", "Liệu thế này có quá tối giản không?" họ thầm nghĩ.
 {% else %}
-  You can drag and drop media files into your web browser and it will play it. Realizing this, you quickly uninstall MPV and follow the path of suffering, path of extreme minimalism. There are a few formats it doesn't accept but it still be an acceptable solution... Or not, Using the browser can only view images in a very basic way, its experience is quite annoying. "Have I gone too far?", "Is this too minimalistic?" you thought.
+  You can drag and drop media files into your web browser and it will play it. Realizing this, they quickly uninstall MPV and follow the path of suffering, path of extreme minimalism. There are a few formats it doesn't accept but it still be an acceptable solution... Or not, Using the browser can only view images in a very basic way, its experience is quite annoying. "Have I gone too far?", "Is this too minimalistic?" they thought.
 {% endif %}
 
 {% if lang == 'vi' %}
