modified:   src/posts/12.md 	modified:   src/posts/13.md

--- a/src/posts/12.md
+++ b/src/posts/12.md
@@ -8,14 +8,14 @@ date: 2023-08-10
 image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 ---
 
-🚧 Page under construction 🚧
-
 [![Berry Rice](https://i.imgur.com/7DWRz1Z.webp)](https://www.reddit.com/r/unixporn/comments/s0cccz/berry_ayudark_my_super_rice)
 
 {% if lang == 'vi' %}
   Khi đang viết [Image viewer/media player tối giản](../9/) về năm giai đoạn rice image viewer, mình nhận ra năm giai đoạn đấy không chỉ có ở riêng việc rice image viewer, nó là của cả việc rice nói chung. Thế nên mình viết bài blog này để đi sâu vào năm giai đoạn rice tối giản.
 {% else %}
-  TODO
+  # 🚧 Page under construction 🚧 <!-- TODO remove -->
+
+  While writing [Image viewer/media player for minimalist](../9/) about the five stages of rice image viewer, I realized that those five stages are not just about rice image viewer, it's about minimalism rice as a whole. So I wrote this blog post to dive into the five stages of minimalist rice.
 {% endif %}
 
 ## 1. Normie
@@ -25,7 +25,7 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 {% if lang == 'vi' %}
   Những bé này mới cài Linux, cụ thể là Ubuntu hoặc Ubuntu-based với DE phổ biến như Gnome hoặc KDE. Bé cài một số extensions, theme, icons rồi cảm thấy khá ưng ý với setup của mình, nghĩ rằng mình chắc sẽ chả config thêm cái gì trong máy nữa đâu.
 {% else %}
-  TODO
+  These newbies have just installed Linux, specifically Ubuntu or Ubuntu-based with a popular DE like Gnome or KDE. They installed some extensions, themes, icons and felt quite satisfied with their setup, thinking that they would never thinker with the OS ever again.
 {% endif %}
 
 ## 2. Beginner
@@ -33,7 +33,7 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 [![BSPWM Rice](https://user-images.githubusercontent.com/43980777/104730274-50495600-576c-11eb-9520-890cb45815d9.png)](https://codeberg.org/NNB/dotfiles/releases/tag/v1.0.0)
 
 {% if lang == 'vi' %}
-  Sau khi cài Linux các thứ xong, bé newbie đấy chắc cũng phải xem kha kha video về Linux trên Youtube, vì thế mà feed của bé hiện kha khá vid của các Linux Youtuber, bé nhấn vào xem rồi chợt nghe thấy ba chữ "I use Arch" (bốn nếu tính cả "BTW"). Bé backup tất cả mọi thứ và distro-hop sang Arch hoặc một Arch-based distro. Không lâu sau đấy bé khám phá ra [r/unixporn](https://www.reddit.com/r/unixporn). Mắt bé sáng lên, bé vội cài [BSPWM](https://github.com/baskerville/bspwm) + [Polybar](https://polybar.github.io) hoặc [Hyprland](https://hyprland.org) + [Waybar](https://github.com/Alexays/Waybar) và dành 2-3 tuần để rice nó.
+  Sau khi cài Linux các thứ xong, bé newbie đấy chắc cũng phải xem kha kha video về Linux trên Youtube, vì thế mà feed của bé hiện kha khá vid của các Linux Youtuber, bé nhấn vào xem rồi chợt nghe thấy ba chữ "I use Arch" (bốn nếu tính cả "BTW"). Bé backup tất cả mọi thứ và distro-hop sang Arch hoặc một Arch-based distro. Không lâu sau đấy bé khám phá ra [r/unixporn](https://www.reddit.com/r/unixporn), mắt bé sáng lên, bé vội cài [BSPWM](https://github.com/baskerville/bspwm) + [Polybar](https://polybar.github.io) hoặc [Hyprland](https://hyprland.org) + [Waybar](https://github.com/Alexays/Waybar) và dành 2-3 tuần để rice nó.
 
   Dùng tiling WM là tâm huyết đi theo keyboard workflow, mà keyboard workflow trên Linux thì không thể thiếu terminal.
 
@@ -42,7 +42,14 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 
   Họ bắt đầu học cách dùng shell, thay thế hầu hết các app GUI sang app TUI/CLI, thay shell chính sang bất cứ thứ gì khác ngoài Bash, độ prompt với [Starship](https://starship.rs), cài [Exa và một số công cụ CLI bằng Rust](https://github.com/sts10/rust-command-line-utilities#unix-to-rust-replacements-or-near-replacements). Cũng không ngạc nhiên gì nếu thời điểm này họ đã dành cả tháng để học và config [NeoVim](https://neovim.io).
 {% else %}
-  TODO
+  After installing Linux and everything, that newbie must also watch a lot of Linux videos on Youtube, so his feed shows quite a lot of Linux Youtubers, he clicked on it and suddenly heard the three words "I use Arch" (four if you count "BTW"). They back up everything and distro-hop to Arch or an Arch-based distro. It wasn't long before they also discovered [r/unixporn](https://www.reddit.com/r/unixporn), their eyes light up, they quickly install [BSPWM](https://github.com/baskerville/bspwm) + [Polybar](https://polybar.github.io) or [Hyprland](https://hyprland.org) + [Waybar](https://github.com/Alexays/Waybar) and spend 2-3 weeks to rice it.
+
+  Using tiling WM is dedicated to following the keyboard workflow, but the keyboard workflow on Linux can't be perfect without the terminal.
+
+  > <span class="font-mono">GUI != Cool<br>
+  > TTY == Hackerman</span>
+
+  They started learning how to use the shell, replacing most GUI apps with TUI/CLI apps and replacing the main shell with anything but Bash. They rice their prompt with [Starship](https://starship.rs), installs [Exa and other Rust-replacements CLI tool](https://github.com/sts10/rust-command-line-utilities#unix-to-rust-replacements-or-near-replacements). Wouldn't be surprised if they've spent months learning and configuring [NeoVim](https://neovim.io) at this point.
 {% endif %}
 
 ## 3. Minimalist
@@ -69,7 +76,7 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
   - When using the terminal or text editor, I just want to look at the focus window and see no value of looking at 3-4 terminal at the same time.
   - Tiling 3-4 windows on the screen make everything cramped, the only advantage of this is to easily interact things between windows with a mouse which contradict with the keyboard workflow.
 
-  TODO
+  Time to move to floating WM. The thing is that minimalist WMs like [SOWM](https://github.com/dylanaraps/sowm) and [Berry](https://berrywm.org) are pretty janky (at least at the time of writing this) so go back to tiling WM we do, we just need to set the rule to make windows automatically float.
 {% endif %}
 
 {% if lang == 'vi' %}
@@ -109,9 +116,11 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 [![Gnome Rice](https://raw.githubusercontent.com/Aylur/dotfiles/gnome43/assets/rose.png)](https://github.com/Aylur/dotfiles/tree/gnome43)
 
 {% if lang == 'vi' %}
-  Sau một thời kỳ mệt mỏi cầu kì tối giản hóa rice, bạn có một cái nhìn khác về sự tối giản. Họ nhận ra rằng dùng DE rất tối giản về mặt thời gian và công sức. DE nói thật cũng không bloat lắm, nó có một số tính năng mà không phải lúc nào mình cũng dùng nhưng có nó thì cũng rất tiện trong những trường hợp cơ nhỡ. Và nếu mình không cài hay config gì mà chỉ sử dụng những thứ mặc định trong máy thì dotfiles của mình sẽ gọn hơn rất nhiều!
+  Sau một thời kỳ mệt mỏi cầu kì tối giản hóa rice, họ có một cái nhìn khác về sự tối giản. Họ nhận ra rằng dùng DE rất tối giản về mặt thời gian và công sức. DE nói thật cũng không bloat lắm, nó có một số tính năng mà không phải lúc nào mình cũng dùng nhưng có nó thì cũng rất tiện trong những trường hợp cơ nhỡ. Và nếu mình không cài hay config gì mà chỉ sử dụng những thứ mặc định trong máy thì dotfiles của mình sẽ gọn hơn rất nhiều!
 
   Và như thế họ quyết định quay lại cài DE. Nhưng lần này với nhiều kinh nghiệm và kĩ năng, rice của họ chất lượng hơn bao giờ hết. Họ thậm chí còn cài thêm nhiều tính năng màu mè hơn, cá tính hơn, đi ngược lại hoàn toàn sự tối giản trước kia... Cuối cùng họ thấy khá ưng ý với setup của mình, nghĩ rằng mình chắc sẽ chả config thêm cái gì trong máy nữa đâu.
 {% else %}
-  TODO
+  After a tiresome period of extreme minimalist rice, they have a different view of minimalism. They realize that using DE is very minimal in terms of time and effort. To be honest, DE is not that bloat, It has some features that although we don't always use, but having it is still very convenient in some situation. And if I don't install or configure anything but just use the default stuff from the DE, the dotfiles will be a lot more minimal!
+
+  And so they decided to go back to installing DE. But this time, with more experience and skill, their rice is better than ever. They even installed more fancy features, more personality, going against the previous minimalism... Finally they felt quite satisfied with their setup, thinking that they would never thinker with the OS ever again.
 {% endif %}
