--- a/src/posts/13.md
+++ b/src/posts/13.md
@@ -8,7 +8,7 @@ date: 2023-08-11
 image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 ---
 
-🚧 Page under construction 🚧
+# 🚧 Page under construction 🚧
 
 <!--
   TODO
