modified:   src/posts/12.md

--- a/src/posts/12.md
+++ b/src/posts/12.md
@@ -13,8 +13,6 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 {% if lang == 'vi' %}
   Khi đang viết [Image viewer/media player tối giản](../9/) về năm giai đoạn rice image viewer, mình nhận ra năm giai đoạn đấy không chỉ có ở riêng việc rice image viewer, nó là của cả việc rice nói chung. Thế nên mình viết bài blog này để đi sâu vào năm giai đoạn rice tối giản.
 {% else %}
-  # 🚧 Page under construction 🚧 <!-- TODO remove -->
-
   While writing [Image viewer/media player for minimalist](../9/) about the five stages of rice image viewer, I realized that those five stages are not just about rice image viewer, it's about minimalism rice as a whole. So I wrote this blog post to dive into the five stages of minimalist rice.
 {% endif %}
 
@@ -84,7 +82,7 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 
   > _\*Khịt khịt\*_ mình ngửi thấy mùi bloat, và mùi đó phát ra từ thanh bar. Chuyển sang bar nhẹ hơn như [Lemonbar](https://github.com/LemonBoy/bar) hay thậm chí là [biến terminal thành bar](https://sw.kovidgoyal.net/kitty/kittens/panel/#command-line-interface) không chắc đã khiến mùi bloat hết thum thủm.
   >
-  > Vấn đề là nó chiếm đi không gian quý báu trên màn hình của mình, một khoảng không gian rộng 16 đến 24 pixel trải dài từ đầu này sang đầu kia bị màn hình bị _lãng phí_ vào việc hiển thị: đồng hồ, workspaces, và một số thông tin vớ vẩn mà thật sự mình chả cần check nó liên tục. Không thể chấp nhận được, vứt bar thôi!
+  > Vấn đề là nó chiếm đi không gian quý báu trên màn hình của mình, một khoảng không gian rộng 16 đến 24 pixel trải dài từ đầu này sang đầu kia bị màn hình bị **lãng phí** vào việc hiển thị: đồng hồ, workspaces, và một số thông tin vớ vẩn mà thật sự mình chả cần check nó liên tục. Không thể chấp nhận được, vứt bar thôi!
   >
   > Ta có thể chỉ hiện danh sách workspaces và đồng hồ khi chuyển workspace hoặc dùng phím tắt [bằng thông báo](https://gist.github.com/NNBnh/5f6e601a6a82a6ed43b1959698758141?permalink_comment_id=3735888#gistcomment-3735888).
   >
@@ -92,7 +90,13 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 {% else %}
   ### Bar is also bloat
 
-  TODO
+  > _\*Sniff sniff\*_ I smell bloat, and that smell comes from the bar. Switch to a lighter bar like [Lemonbar](https://github.com/LemonBoy/bar) or even [turn the terminal into bar](https://sw.kovidgoyal.net/kitty/kittens/panel/#command-line-interface) is unlikely to get rid of the stinky bloat smell.
+  >
+  > The problem is that it takes up precious space on my screen, a 16 to 24 pixel-wide space that stretches from one end to the other of the screen is **wasted** to display: the clock, workspaces, and some crappy information that I really don't need to check constantly. Unacceptable, throw the bar away!
+  >
+  > You can show the list of workspaces and the clock only when switching workspaces or using keyboard shortcuts to [display it through a notification](https://gist.github.com/NNBnh/5f6e601a6a82a6ed43b1959698758141?permalink_comment_id=3735888#gistcomment-3735888).
+  >
+  > Or go the hardcore route and ditch it altogether, check the time on your watch, wall clock, or use the `date` command XD. Workspaces are really not necessary when I always maximize windows and rarely tile them anyway. Just use a workspace-less desktop, no need to config, no need to display.
 {% endif %}
 
 ## 4. Extreme Minimalist
@@ -102,13 +106,19 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 {% if lang == 'vi' %}
   WM... là Bloat. Ta cũng có thể gỡ WM và login manager luôn. Dùng full TTY của Linux Kernel và gõ lệnh để mở app... [NOWM](https://github.com/K4zoku/nowm) hoặc [[wms]](https://git.disroot.org/root_informatica/wms) sẽ giúp trải nghiệm đỡ thê thảm hơn khi không có WM.
 
-  Nhớ mấy cái TUI/CLI app bà họ cài ở giai đoạn beginner không? Chúng ta nhận ra mình không cần đến 80% trong số đó, mình thà dùng những công cụ có sẵn trong chuẩn POSIX để script trở nên di động hơn. Rồi thậm chỉ còn bỏ luôn file manager!
+  Nhớ mấy cái TUI/CLI app bà họ cài ở giai đoạn beginner không? Chúng ta nhận ra mình không cần đến 80% trong số đó, thà dùng những công cụ có sẵn trong chuẩn POSIX để script trở nên di động hơn. Rồi thậm chỉ còn bỏ luôn file manager!
 
   Shell prompt giờ chỉ là "`$`", `pwd` là ngọn đuốc duy nhất thắp sáng cho ta trong file system.
 
   Rice giờ không chỉ tối giản nữa, nó biến thành cái hố đen rồi. Hiếm kẻ đủ can đảm để đi xa hơn ngưỡng này, nhưng một số huyền vẫn thoại tiếp tục, đặc điểm duy nhất để nhận dạng ra họ là họ làm [Linux From Scratch](https://www.linuxfromscratch.org/lfs) và biết [Linux framebuffer](https://wikipedia.org/wiki/Linux_framebuffer) là gì.
 {% else %}
-  TODO
+  WM... is Bloat. We can also get rid of WM and login manager altogether. Use full TTY from Linux Kernel and type the command to open GUI app... [NOWM](https://github.com/K4zoku/nowm) or [[wms]](https://git.disroot.org/root_informatica/wms) will make the experience less miserable without WM.
+
+  Remember those TUI/CLI apps we installed at the beginner stage? We realize we don't need 80% of it, we would rather use the tools available in the POSIX standard to make the script more portable. Then we even removed the file manager!
+
+  The shell prompt is now just "`$`", `pwd` is the only torch that lights us the way in the file system.
+
+  The rice is no longer minimalist, it has become the black hole. Few are brave enough to go beyond, but some legends continue, The few features that identifies them is that they do [Linux From Scratch](https://www.linuxfromscratch.org/lfs) and know what [Linux framebuffer](https://wikipedia.org/wiki/Linux_framebuffer) is.
 {% endif %}
 
 ## 5. Maximalist
