modified:   src/posts/12.md

--- a/src/posts/12.md
+++ b/src/posts/12.md
@@ -134,3 +134,11 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 
   And so they decided to go back to installing DE. But this time, with more experience and skill, their rice is better than ever. They even installed more fancy features, more personality, going against the previous minimalism... Finally they felt quite satisfied with their setup, thinking that they would never thinker with the OS ever again.
 {% endif %}
+
+---
+
+{% if lang == 'vi' %}
+  Cảm ơn [Kazoku](https://github.com/K4zoku) vì đã cung cấp một số ảnh rice cho bài viết này!
+{% else %}
+  Credit to [Kazoku](https://github.com/K4zoku) for the Rice images!
+{% endif %}
