modified:   src/posts/13.md

--- a/src/posts/13.md
+++ b/src/posts/13.md
@@ -1,6 +1,6 @@
 ---
 title:
-  en: My perfect distro
+  en: My ideal distro
   vi: Distro lý tưởng
 tags:
   - os_rice
@@ -8,33 +8,93 @@ date: 2023-08-11
 image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 ---
 
-# 🚧 Page under construction 🚧
+{% if lang == 'vi' %}
+  ## Tại sao lại chọn Linux?
+
+  Mình chọn Linux thay vì Windows và MacOS vì:
+
+  - Nó nhanh và nhẹ, môi trường của nó rất tiện cho dev.
+  - Nó [FOSS](https://wikipedia.org/wiki/Free_and_open-source_software).
+  - [Nó là hệ điều hành máy tính bảo mật nhất](https://www.privacytools.io/os).
+  - Và quan trong hơn cả là khả năng cá nhân hóa vô hạn của nó.
+{% else %}
+  ## Why Linux in the first place?
+
+  I choose Linux over Windows and MacOS because:
+
+  - It is fast, lightweight.
+  - It is [FOSS](https://wikipedia.org/wiki/Free_and_open-source_software).
+  - [It's the most privacy desktop OS](https://www.privacytools.io/os).
+  - And most importantly it's customizability is endless.
+{% endif %}
+
+## Base Distro
+
+{% if lang == 'vi' %}
+  Dotfiles của mình khá là linh hoạt, nó có thể dễ dàng chuyển đổi sang hầu hết mọi distro. Nhưng mình vẫn có sự ưa thích theo thứ tự: Arch-based > Ubuntu-based > Fedora-based > khác.
+
+  [Fedora](https://fedoraproject.org) được cái có vẻ ổn định và cập nhật nhanh hơn so với [Ubuntu](https://ubuntu.com), nhưng nó lại không có các packages mà không thật sự mở nguồn, mấy packages vẫn cài được thôi nhưng hơn khó chịu.
+
+  [Arch](https://archlinux.org) có lượng packages đồ sộ nhất _nếu_ tính cả AUR, mà AUR thỉnh thoảng khá là Janky. Arch bị dính tiếng là dễ break hơn so với các distro khác, mình thấy mọi distro đều break một cách bình đẳng...
+
+  [NixOS](https://nixos.org) mặc dù có lượng packages cạnh tranh và thỉnh thoảng còn chất lương hơn với Arch, mình lại né nó sau một thời gian độ nó vì cả hệ điều hành rất Janky!
+{% else %}
+  TODO en
+{% endif %}
+
+## Desktop Environment
+
+{% if lang == 'vi' %}
+  Sau một thời gian độ window manager, mình quyết đinh quay lại chơi DE (giải thích chi tiết hơn [ở đây](../12/#5-maximalist)) vì mình muốn tìm kiếm một trải nghiệm ổn định, hài hòa và "it just work".
+
+  Những DE như [LXDE](https://www.lxde.org) và [XFCE](https://xfce.org) khá là nhẹ, quá là nhẹ đằng khác, nó không phù hợp với mình vì nó không cá nhân hóa tốt và tiện như ý mình được.
+
+  DE như [Pantheon](https://elementary.io) và [Deepin](https://www.deepin.org/en/dde) có trải nghiệm out-of-the-box khá tốt nhưng nó không cá nhân hóa được hơn, mình reccommen những DE này nếu bạn yêu nó từ cái nhìn đầu tiên và không có nhu cầu rice.
+
+  [KDE Plasma](https://www.kde.org/plasma-desktop) rất dễ cá nhân hóa từ những thứ đơn giản cho đến những tính năng tân tiến nhất out-of-the-box. Plasma khá dễ config, rất phù hợp cho người mới dùng Linux mà muốn rice.
+
+  [Gnome](www.gnome.org) TODO
 
 <!--
-  TODO
-
-  ## Base
-
-  ## DE
-
-  https://github.com/NNBnh/dotfiles/wiki/which#%EF%B8%8F-desktop-environment
-
-  ## Other
-
-  Bloat-free
-  Codex, 7z, Rar
-  Git, FFMPEG, Python, [WL-clipboard](https://github.com/bugaevc/wl-clipboard)
-  Unikey
-
-  - Gnome: [Gnome Tweaks](https://gitlab.gnome.org/GNOME/gnome-tweaks), [Extension Manager](https://github.com/mjakeman/extension-manager)
-  - KDE: [Kvantum](https://store.kde.org/p/1005410)
-
-  ## Bonus
-
-  Browser-free
-  Wine
-
-  ## Distro
-
-  https://github.com/NNBnh/dotfiles/wiki/which#-operating-system
+It's very polished and consistent in design but it's very restrictive in terms of customization and you have to commit to it's workflow.
 -->
+{% else %}
+  TODO en
+{% endif %}
+
+## Other
+
+[this fix](https://askubuntu.com/a/1126434)
+
+{% if lang == 'vi' %}
+  ## Các yêu cầu khác
+
+  - Bloat-free: không có cài nhiều phần mềm lung tung như games, maps, image/video editor hay thậm chí cả trình duyệt web. Đừng nhét sẵn đống phần mềm mà có người thích người không vào trong máy, hãy để người dùng tự cài những phần mềm mà họ muốn. Đống phần mềm đấy có thể được cài sẵn trong live-image nhưng hãy để nó là tùy chọn không được tích sẵn trong quà trình cài đặt.
+  - DE tuyệt đối không có sẵn bất cứ theming/branding gì hết, chỉ là DE thuần với theme mặc định thôi.
+  - Phải có cài đặt sãn:
+    - Setup sẵn Flatpak.
+    - Các loại video codex.
+    - Các định dạng nén như [7-Zip](https://7-zip.org), [Rar](https://www.rarlab.com).
+    - Các công cụ CLI: [Git](https://git-scm.com), [FFmpeg](https://ffmpeg.org), [Curl](https://curl.se) và [WL-clipboard](https://github.com/bugaevc/wl-clipboard)..
+    - Input method chất lượng từ Unikey trở lên.
+    - Các công cụ để rice DE:
+      - Nếu DE là Gnome thì phải có sẵn [Gnome Tweaks](https://gitlab.gnome.org/GNOME/gnome-tweaks), [Extension Manager](https://github.com/mjakeman/extension-manager).
+      - Còn nếu là KDE thì [Kvantum](https://store.kde.org/p/1005410).
+    - Một setup [Wine](https://www.winehq.org) tốt.
+{% else %}
+  ## Other requirements
+
+  TODO en
+{% endif %}
+
+## Distro
+
+[Nobara](https://nobaraproject.org)
+[Vanilla OS](https://vanillaos.org)
+[Blend OS](https://blendos.co)
+
+{% if lang == 'vi' %}
+  TODO
+{% else %}
+  TODO en
+{% endif %}
