--- a/src/posts/13.md
+++ b/src/posts/13.md
@@ -4,7 +4,7 @@ title:
   vi: Distro lý tưởng
 tags:
   - os_rice
-date: 2023-08-11
+date: 2023-08-12
 image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 ---
 
@@ -18,6 +18,8 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
   - [Nó là hệ điều hành máy tính bảo mật nhất](https://www.privacytools.io/os).
   - Và quan trong hơn cả là khả năng cá nhân hóa vô hạn của nó.
 {% else %}
+  # 🚧 Page under construction 🚧
+
   ## Why Linux in the first place?
 
   I choose Linux over Windows and MacOS because:
@@ -35,11 +37,11 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 
   [Fedora](https://fedoraproject.org) được cái có vẻ ổn định và cập nhật nhanh hơn so với [Ubuntu](https://ubuntu.com), nhưng nó lại không có các packages mà không thật sự mở nguồn, mấy packages vẫn cài được thôi nhưng hơn khó chịu.
 
-  [Arch](https://archlinux.org) có lượng packages đồ sộ nhất _nếu_ tính cả AUR, mà AUR thỉnh thoảng khá là Janky. Arch bị dính tiếng là dễ break hơn so với các distro khác, mình thấy mọi distro đều break một cách bình đẳng...
+  [Arch](https://archlinux.org) có lượng packages đồ sộ nhất _nếu_ tính cả AUR, mà AUR thỉnh thoảng khá là janky. Arch bị dính tiếng là dễ break hơn so với các distro khác, mình thấy mọi distro đều break một cách bình đẳng...
 
-  [NixOS](https://nixos.org) mặc dù có lượng packages cạnh tranh và thỉnh thoảng còn chất lương hơn với Arch, mình lại né nó sau một thời gian độ nó vì cả hệ điều hành rất Janky!
+  [NixOS](https://nixos.org) mặc dù có lượng packages cạnh tranh và thỉnh thoảng còn chất lương hơn với Arch, mình lại né nó sau một thời gian độ nó vì cả hệ điều hành rất janky!
 {% else %}
-  TODO en
+  TODO
 {% endif %}
 
 ## Desktop Environment
@@ -51,15 +53,11 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 
   DE như [Pantheon](https://elementary.io) và [Deepin](https://www.deepin.org/en/dde) có trải nghiệm out-of-the-box khá tốt nhưng nó không cá nhân hóa được hơn, mình reccommen những DE này nếu bạn yêu nó từ cái nhìn đầu tiên và không có nhu cầu rice.
 
-  [KDE Plasma](https://www.kde.org/plasma-desktop) rất dễ cá nhân hóa từ những thứ đơn giản cho đến những tính năng tân tiến nhất out-of-the-box. Plasma khá dễ config, rất phù hợp cho người mới dùng Linux mà muốn rice.
+  [KDE Plasma](https://www.kde.org/plasma-desktop) rất dễ cá nhân hóa từ những thứ đơn giản cho đến những tính năng tân tiến nhất out-of-the-box. Plasma khá dễ config, rất phù hợp cho người mới dùng Linux mà muốn rice. Các app KDE rất giàu tính năng (điển hình là [Dolphin](https://apps.kde.org/dolphin)) nhưng giao diện của nó lại hơi chật chội.
 
-  [Gnome](www.gnome.org) TODO
-
-<!--
-It's very polished and consistent in design but it's very restrictive in terms of customization and you have to commit to it's workflow.
--->
+  [Gnome](www.gnome.org) là một DE thiết kế rất hài hòa, thống nhất, tối giản và sang. Từ Windows hay DE khác chuyển sang cảm giác ban đầu sẽ bỡ ngở nhưng một thời gian dùng sau bạn sẽ hiểu được vẻ đẹp của thiết kế và workflow mà Gnome mang đến. Về mặt cá nhân hóa, Gnome thực ra không kém cạnh gì KDE mà thực ra còn tốt hơn: Mặc dù Gnome không hỗ trợ chính thức, bạn có thể cài [extensions để cá nhân hóa Gnome](https://extensions.gnome.org). Gnome extensions rất đa dạng và phong phú, nó hòa mình vào DE rất tốt, Gnome có extension như [Unite](https://extensions.gnome.org/extension/1287/unite) trong khi KDE khó có thể rice để làm được điều tương tự tiện như Gnome.
 {% else %}
-  TODO en
+  TODO
 {% endif %}
 
 ## Other
@@ -72,11 +70,12 @@ It's very polished and consistent in design but it's very restrictive in terms o
   - Bloat-free: không có cài nhiều phần mềm lung tung như games, maps, image/video editor hay thậm chí cả trình duyệt web. Đừng nhét sẵn đống phần mềm mà có người thích người không vào trong máy, hãy để người dùng tự cài những phần mềm mà họ muốn. Đống phần mềm đấy có thể được cài sẵn trong live-image nhưng hãy để nó là tùy chọn không được tích sẵn trong quà trình cài đặt.
   - DE tuyệt đối không có sẵn bất cứ theming/branding gì hết, chỉ là DE thuần với theme mặc định thôi.
   - Phải có cài đặt sãn:
-    - Setup sẵn Flatpak.
+    - [Flatpak](https://www.flatpak.org).
+    - Có [phông chữ CJK](https://wikipedia.org/wiki/CJK_characters).
     - Các loại video codex.
     - Các định dạng nén như [7-Zip](https://7-zip.org), [Rar](https://www.rarlab.com).
     - Các công cụ CLI: [Git](https://git-scm.com), [FFmpeg](https://ffmpeg.org), [Curl](https://curl.se) và [WL-clipboard](https://github.com/bugaevc/wl-clipboard)..
-    - Input method chất lượng từ Unikey trở lên.
+    - Input method chất lượng từ [Unikey](https://www.unikey.org) trở lên.
     - Các công cụ để rice DE:
       - Nếu DE là Gnome thì phải có sẵn [Gnome Tweaks](https://gitlab.gnome.org/GNOME/gnome-tweaks), [Extension Manager](https://github.com/mjakeman/extension-manager).
       - Còn nếu là KDE thì [Kvantum](https://store.kde.org/p/1005410).
@@ -84,17 +83,27 @@ It's very polished and consistent in design but it's very restrictive in terms o
 {% else %}
   ## Other requirements
 
-  TODO en
+  TODO
 {% endif %}
 
-## Distro
-
-[Nobara](https://nobaraproject.org)
-[Vanilla OS](https://vanillaos.org)
-[Blend OS](https://blendos.co)
-
 {% if lang == 'vi' %}
-  TODO
+  ## Distro lý tưởng
+
+  Và cuối cùng lựa chọn của mình là: [Nobara](https://nobaraproject.org)!
+
+  Nobara là một distro tập chung vào gaming, nó không check tất cả các tiêu chuẩn mình mong muốn và thi thoảng nó hơi janky. Nhưng nó có trải nghiệm out-of-the-box tốt nhất so với tất cả các distro mà mình đã trải nghiệm.
+
+  ### Những lựa chọn khá lý tưởng khác
+ mình
+  [Vanilla OS](https://vanillaos.org) là một distro cho phép người dùng cài ứng dụng từ mọi Linux distro từ Arch, Fedora cho đến NixOS. Nó check rất nhiều tiêu chuẩn mà mình mong muốn từ một distro, nhưng ki mình thử cài nó hồi đầu năm nay, nó có vẻ chưa sẵn sàng để được sử dụng thực tế... Vanilla rất janky, cho máy ngủ xong bật lại nó đơ luôn...
+
+  [Blend OS](https://blendos.co) giống Vanilla ở khoản cho người dùng cài ứng dụng từ nhiều distro. Nó Arch-based và mình mong là nó sẽ trở thành lựa chọn ưa thích nhất của mình khi mình cài thử nó trong tương lại gần.
 {% else %}
-  TODO en
+  ## My ideal distro
+
+  TODO
+
+  ### Honorable Mention
+
+  TODO
 {% endif %}
