modified:   src/posts/13.md

--- a/src/posts/13.md
+++ b/src/posts/13.md
@@ -16,10 +16,8 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
   - Nó nhanh và nhẹ, môi trường của nó rất tiện cho dev.
   - Nó [FOSS](https://wikipedia.org/wiki/Free_and_open-source_software).
   - [Nó là hệ điều hành máy tính bảo mật nhất](https://www.privacytools.io/os).
-  - Và quan trong hơn cả là khả năng cá nhân hóa vô hạn của nó.
-{% else %}
-  # 🚧 Page under construction 🚧
-
+  - Và quan trọng hơn cả là khả năng cá nhân hóa vô hạn của nó.
+{% else %}=
   ## Why Linux in the first place?
 
   I choose Linux over Windows and MacOS because:
@@ -47,29 +45,25 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 ## Desktop Environment
 
 {% if lang == 'vi' %}
-  Sau một thời gian độ window manager, mình quyết đinh quay lại chơi DE (giải thích chi tiết hơn [ở đây](../12/#5-maximalist)) vì mình muốn tìm kiếm một trải nghiệm ổn định, hài hòa và "it just work".
+  Sau một thời gian độ window manager, mình quyết định quay lại chơi DE (giải thích chi tiết hơn [ở đây](../12/#5-maximalist)) vì mình muốn tìm kiếm một trải nghiệm ổn định, hài hòa và "it just work".
 
   Những DE như [LXDE](https://www.lxde.org) và [XFCE](https://xfce.org) khá là nhẹ, quá là nhẹ đằng khác, nó không phù hợp với mình vì nó không cá nhân hóa tốt và tiện như ý mình được.
 
-  DE như [Pantheon](https://elementary.io) và [Deepin](https://www.deepin.org/en/dde) có trải nghiệm out-of-the-box khá tốt nhưng nó không cá nhân hóa được hơn, mình reccommen những DE này nếu bạn yêu nó từ cái nhìn đầu tiên và không có nhu cầu rice.
+  DE như [Pantheon](https://elementary.io) và [Deepin](https://www.deepin.org/en/dde) có trải nghiệm out-of-the-box khá tốt nhưng nó không cá nhân hóa được hơn, mình reccomen những DE này nếu bạn yêu nó từ cái nhìn đầu tiên và không có nhu cầu rice.
 
   [KDE Plasma](https://www.kde.org/plasma-desktop) rất dễ cá nhân hóa từ những thứ đơn giản cho đến những tính năng tân tiến nhất out-of-the-box. Plasma khá dễ config, rất phù hợp cho người mới dùng Linux mà muốn rice. Các app KDE rất giàu tính năng (điển hình là [Dolphin](https://apps.kde.org/dolphin)) nhưng giao diện của nó lại hơi chật chội.
 
-  [Gnome](www.gnome.org) là một DE thiết kế rất hài hòa, thống nhất, tối giản và sang. Từ Windows hay DE khác chuyển sang cảm giác ban đầu sẽ bỡ ngở nhưng một thời gian dùng sau bạn sẽ hiểu được vẻ đẹp của thiết kế và workflow mà Gnome mang đến. Về mặt cá nhân hóa, Gnome thực ra không kém cạnh gì KDE mà thực ra còn tốt hơn: Mặc dù Gnome không hỗ trợ chính thức, bạn có thể cài [extensions để cá nhân hóa Gnome](https://extensions.gnome.org). Gnome extensions rất đa dạng và phong phú, nó hòa mình vào DE rất tốt, Gnome có extension như [Unite](https://extensions.gnome.org/extension/1287/unite) trong khi KDE khó có thể rice để làm được điều tương tự tiện như Gnome.
+  [Gnome](www.gnome.org) là một DE thiết kế rất hài hòa, thống nhất, tối giản và sang. Từ Windows hay DE khác chuyển sang cảm giác ban đầu sẽ bỡ ngỡ nhưng một thời gian dùng sau bạn sẽ hiểu được vẻ đẹp của thiết kế và workflow mà Gnome mang đến. Về mặt cá nhân hóa, Gnome thực ra không kém cạnh gì KDE mà thực ra còn tốt hơn: Mặc dù Gnome không hỗ trợ chính thức, bạn có thể cài [extensions để cá nhân hóa Gnome](https://extensions.gnome.org). Gnome extensions rất đa dạng và phong phú, nó hòa mình vào DE rất tốt, Gnome có extension như [Unite](https://extensions.gnome.org/extension/1287/unite) trong khi KDE khó có thể rice để làm được điều tương tự tiện như Gnome.
 {% else %}
   TODO
 {% endif %}
 
-## Other
-
-[this fix](https://askubuntu.com/a/1126434)
-
 {% if lang == 'vi' %}
   ## Các yêu cầu khác
 
-  - Bloat-free: không có cài nhiều phần mềm lung tung như games, maps, image/video editor hay thậm chí cả trình duyệt web. Đừng nhét sẵn đống phần mềm mà có người thích người không vào trong máy, hãy để người dùng tự cài những phần mềm mà họ muốn. Đống phần mềm đấy có thể được cài sẵn trong live-image nhưng hãy để nó là tùy chọn không được tích sẵn trong quà trình cài đặt.
+  - Bloat-free: không có cài nhiều phần mềm lung tung như games, maps, image/video editor hay thậm chí cả trình duyệt web. Đừng nhét sẵn đống phần mềm mà có người thích người không vào trong máy, hãy để người dùng tự cài những phần mềm mà họ muốn. Đống phần mềm đấy có thể được cài sẵn trong live-image nhưng hãy để nó là tùy chọn không được tích sẵn trong quá trình cài đặt.
   - DE tuyệt đối không có sẵn bất cứ theming/branding gì hết, chỉ là DE thuần với theme mặc định thôi.
-  - Phải có cài đặt sãn:
+  - Phải có cài đặt sẵn:
     - [Flatpak](https://www.flatpak.org).
     - Có [phông chữ CJK](https://wikipedia.org/wiki/CJK_characters).
     - Các loại video codex.
@@ -80,6 +74,7 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
       - Nếu DE là Gnome thì phải có sẵn [Gnome Tweaks](https://gitlab.gnome.org/GNOME/gnome-tweaks), [Extension Manager](https://github.com/mjakeman/extension-manager).
       - Còn nếu là KDE thì [Kvantum](https://store.kde.org/p/1005410).
     - Một setup [Wine](https://www.winehq.org) tốt.
+  - Distro phái không có [vấn đề phân vùng khi dual-boot Windows](https://askubuntu.com/a/1126434).
 {% else %}
   ## Other requirements
 
@@ -95,9 +90,9 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 
   ### Những lựa chọn khá lý tưởng khác
  mình
-  [Vanilla OS](https://vanillaos.org) là một distro cho phép người dùng cài ứng dụng từ mọi Linux distro từ Arch, Fedora cho đến NixOS. Nó check rất nhiều tiêu chuẩn mà mình mong muốn từ một distro, nhưng ki mình thử cài nó hồi đầu năm nay, nó có vẻ chưa sẵn sàng để được sử dụng thực tế... Vanilla rất janky, cho máy ngủ xong bật lại nó đơ luôn...
+  [Vanilla OS](https://vanillaos.org) là một distro cho phép người dùng cài ứng dụng từ mọi Linux distro từ Arch, Fedora cho đến NixOS. Nó check rất nhiều tiêu chuẩn mà mình mong muốn từ một distro, nhưng khi mình thử cài nó hồi đầu năm nay, nó có vẻ chưa sẵn sàng để được sử dụng thực tế... Vanilla rất janky, cho máy ngủ xong bật lại nó đơ luôn...
 
-  [Blend OS](https://blendos.co) giống Vanilla ở khoản cho người dùng cài ứng dụng từ nhiều distro. Nó Arch-based và mình mong là nó sẽ trở thành lựa chọn ưa thích nhất của mình khi mình cài thử nó trong tương lại gần.
+  [Blend OS](https://blendos.co) giống Vanilla ở khoản cho người dùng cài ứng dụng từ nhiều distro. Nó Arch-based và mình mong là nó sẽ trở thành lựa chọn ưa thích nhất của mình khi mình cài thử nó trong tương lai gần.
 {% else %}
   ## My ideal distro
 
